[gd_scene load_steps=11 format=1]

[ext_resource path="res://script/HighScorePopup.gd" type="Script" id=1]
[ext_resource path="res://gfx/gui/popup-book.png" type="Texture" id=2]
[ext_resource path="res://font/PopupH1.tres" type="DynamicFont" id=3]
[ext_resource path="res://script/FitWidthLabel.gd" type="Script" id=4]
[ext_resource path="res://font/PopupH2.tres" type="DynamicFont" id=5]
[ext_resource path="res://font/PopupStrong.tres" type="DynamicFont" id=6]
[ext_resource path="res://ScoreLabel.tscn" type="PackedScene" id=7]

[sub_resource type="Animation" id=1]

length = 0.01
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Popup:transform/pos")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 0,
"values": [ Vector2( 640, -512 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Popup:transform/rot")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 0,
"values": [ -5.0 ]
}

[sub_resource type="Animation" id=2]

length = 0.5
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Popup:transform/pos")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.5 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 640, 470 ), Vector2( 640, 1370 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Popup:transform/rot")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0, 0.5 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0 ]
}

[sub_resource type="Animation" id=3]

length = 0.5
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Popup:transform/pos")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.5 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 640, -512 ), Vector2( 640, 470 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Popup:transform/rot")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0, 0.5 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ -5.0, 0.0 ]
}

[node name="HighScorePopup" type="Area2D"]

input/pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
monitorable = false
script/script = ExtResource( 1 )

[node name="Popup" type="Node2D" parent="."]

transform/pos = Vector2( 640, 470 )

[node name="Book" type="Sprite" parent="Popup"]

transform/pos = Vector2( 10, 20 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="TitleLabel" type="Label" parent="Popup"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -310.0
margin/top = -295.0
margin/right = 0.0
margin/bottom = -235.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "AAAAAAAA"
align = 1
valign = 1
clip_text = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
script/script = ExtResource( 4 )
BaseFontSize = 48
MaxTextLength = 8

[node name="BestWordTitleLabel" type="Label" parent="Popup"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 40.0
margin/top = -280.0
margin/right = 214.0
margin/bottom = -240.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Best word:"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="BestWordLabel" type="Label" parent="Popup"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 30.0
margin/top = -220.0
margin/right = 320.0
margin/bottom = -180.0
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "AAAAAAAAAAA"
align = 1
valign = 1
clip_text = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
script/script = ExtResource( 4 )
BaseFontSize = 32
MaxTextLength = 11

[node name="BestWordNameLabel" type="Label" parent="Popup"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 40.0
margin/top = -140.0
margin/right = 320.0
margin/bottom = -100.0
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "ABC"
align = 1
valign = 1
clip_text = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
script/script = ExtResource( 4 )
BaseFontSize = 32
MaxTextLength = 11

[node name="BestWordScoreLabel" parent="Popup" instance=ExtResource( 7 )]

rect/scale = Vector2( 0.75, 0.75 )
margin/left = 30.0
margin/top = -210.0
margin/right = 417.0
margin/bottom = -104.0
text = "1,000,000"
MaxTextLength = 9

[node name="LongestWordTitleLabel" type="Label" parent="Popup"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 40.0
margin/top = -30.0
margin/right = 262.0
margin/bottom = 10.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Longest word:"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="LongestWordLabel" type="Label" parent="Popup"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 30.0
margin/top = 30.0
margin/right = 320.0
margin/bottom = 70.0
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "AAAAAAAAAAA"
align = 1
valign = 1
clip_text = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
script/script = ExtResource( 4 )
BaseFontSize = 32
MaxTextLength = 11

[node name="LongestWordScoreLabel" parent="Popup" instance=ExtResource( 7 )]

rect/scale = Vector2( 0.75, 0.75 )
margin/left = 30.0
margin/top = 40.0
margin/right = 417.0
margin/bottom = 146.0
text = "15 letters"
script/script = ExtResource( 4 )

[node name="LongestWordNameLabel" type="Label" parent="Popup"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 40.0
margin/top = 110.0
margin/right = 320.0
margin/bottom = 150.0
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "ABC"
align = 1
valign = 1
clip_text = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
script/script = ExtResource( 4 )
BaseFontSize = 32
MaxTextLength = 11

[node name="HighScoreContainer" type="Node2D" parent="Popup"]

transform/pos = Vector2( -280, -180 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/Default = SubResource( 1 )
anims/Hide = SubResource( 2 )
anims/Show = SubResource( 3 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[connection signal="finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_finished"]


